--- a/public/dashboard/assets/css/style.css
+++ b/public/dashboard/assets/css/style.css
@@ -37,3 +37,26 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
     top: 13px !important;
     width: 75%;
 }
+
+.item_card{
+    display: flex;
+    gap: 25px ;
+    padding: 20px ;
+    align-items: start;
+
+
+}
+
+.item_card ul li {
+    list-style-type: none;
+    margin: 10px 0;
+}
+.item_card ul
+{
+    padding: 0;
+}
+
+
+.item_card  .card-body{
+    padding: 0;
+}
