--- a/public/dashboard/app-assets/css-rtl/components.css
+++ b/public/dashboard/app-assets/css-rtl/components.css
@@ -689,10 +689,10 @@ footer.footer-border {
 }
 
 .main-menu.menu-light .navigation > li.active > a {
-  background : -webkit-linear-gradient(208deg, #7367F0, rgba(115, 103, 240, 0.7));
-  background :         linear-gradient(-118deg, #7367F0, rgba(115, 103, 240, 0.7));
-  box-shadow : 0 0 10px 1px rgba(115, 103, 240, 0.7);
-  color : #FFFFFF;
+    background: -webkit-linear-gradient(208deg, #E5E5E5, #E5E5E5);
+    background: linear-gradient(-118deg,#E5E5E5,#E5E5E5);
+  box-shadow :none;
+  color : #1E1E1E;
   font-weight : 400;
   border-radius : 4px;
 }
@@ -702,7 +702,7 @@ footer.footer-border {
 }
 
 .main-menu.menu-light .navigation > li .active > a {
-  color : #7367F0;
+  color : #1E1E1E;
   margin-bottom : 0;
 }
 
@@ -756,10 +756,10 @@ footer.footer-border {
 }
 
 .main-menu.menu-light .navigation > li ul .active {
-  background : -webkit-linear-gradient(208deg, #7367F0, rgba(115, 103, 240, 0.7));
-  background :         linear-gradient(-118deg, #7367F0, rgba(115, 103, 240, 0.7));
-  box-shadow : 0 0 10px 1px rgba(115, 103, 240, 0.7);
-  border-radius : 4px;
+background: -webkit-linear-gradient(208deg, #E5E5E5, #E5E5E5);
+background: linear-gradient(-118deg,#E5E5E5,#E5E5E5);
+  box-shadow : none;
+  border-radius : 0px;
   z-index : 1;
 }
 
@@ -880,12 +880,12 @@ footer.footer-border {
 }
 
 .main-menu.menu-dark .navigation > li.active > a {
-  background : -webkit-linear-gradient(208deg, #7367F0, rgba(115, 103, 240, 0.7));
-  background :         linear-gradient(-118deg, #7367F0, rgba(115, 103, 240, 0.7));
-  box-shadow : 0 0 10px 1px rgba(115, 103, 240, 0.7);
-  color : #FFFFFF;
+    background: -webkit-linear-gradient(208deg, #E5E5E5, #E5E5E5);
+    background: linear-gradient(-118deg,#E5E5E5,#E5E5E5);
+  box-shadow :none;
+  color : #1E1E1E;
   font-weight : 400;
-  border-radius : 4px;
+  border-radius :0px;
 }
 
 .main-menu.menu-dark .navigation > li .active {
@@ -947,10 +947,10 @@ footer.footer-border {
 }
 
 .main-menu.menu-dark .navigation > li ul .active {
-  background : -webkit-linear-gradient(208deg, #7367F0, rgba(115, 103, 240, 0.7));
-  background :         linear-gradient(-118deg, #7367F0, rgba(115, 103, 240, 0.7));
-  box-shadow : 0 0 10px 1px rgba(115, 103, 240, 0.7);
-  border-radius : 4px;
+    background: -webkit-linear-gradient(208deg, #E5E5E5, #E5E5E5);
+    background: linear-gradient(-118deg,#E5E5E5,#E5E5E5);
+  box-shadow :none;
+  border-radius : 0px;
   z-index : 1;
 }
 
