--- a/public/dashboard/assets/css/style.css
+++ b/public/dashboard/assets/css/style.css
@@ -199,3 +199,83 @@ a:hover {
 .datatables-basic{
     white-space: nowrap;
 }
+
+.login_new_page {
+    min-height: 100vh;
+    background-image: url(../../app-assets/images/pages/auth-screen.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    position: relative;
+    width: 100%;
+    background-position: center;
+}
+
+.login_new_page::after {
+    content: "";
+    top: 20px;
+    left: 20px;
+    width: 200px;
+
+    filter: brightness(0) invert(1);
+    background-repeat: no-repeat;
+    height: 200px;
+    background-size: contain;
+    position: absolute;
+    background-image: url(../../app-assets/images/pages/2030.png);
+}
+
+.sub_login_new_page {
+    background-color: #FFFFFF;
+    padding: 40px;
+    border-radius: 10px;
+    margin: auto;
+
+    width: 50%;
+}
+
+.sub_login_new_page .form-control {
+    height: 50px;
+    border-radius: 5px;
+    border: 1px solid #E5E5E5;
+    padding: 0 20px;
+    font-size: 14px;
+    color: #5E5873;
+    font-weight: 400;
+    background-color: #FFFFFF;
+    box-shadow: none;
+    margin: 5px 0;
+
+}
+
+.sub_login_new_page .input-group:not(.bootstrap-touchspin):focus-within .form-control,
+.sub_login_new_page .input-group:not(.bootstrap-touchspin):focus-within .input-group-text {
+    border: none;
+    box-shadow: none;
+}
+
+.sub_login_new_page .input-group-text.cursor-pointer {
+    height: 50px;
+    vertical-align: middle;
+}
+
+.sub_login_new_page .input-group-append {
+    margin: 5px -1px;
+}
+
+.logo_login_new_page {
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+
+    height: 220px;
+}
+
+.logo_login_new_page img {
+    max-width: 100%;
+    max-height: 100%
+}
