--- a/public/dashboard/assets/css/style-rtl.css
+++ b/public/dashboard/assets/css/style-rtl.css
@@ -302,3 +302,50 @@ a:hover {
 #tblMafkodat_wrapper button:hover{
     box-shadow: 0px 0px 8px #f6951e75;
 }
+
+#tblItemMafkodat {
+    white-space: nowrap;
+}
+
+#tblItemMafkodat_wrapper button{
+    background: #f6931e;
+    height: 40px;
+    width: 105px;
+    color: #fff;
+    border: 0;
+    border-radius: 5px;
+    margin: 10px ;
+}
+
+#tblItemMafkodat_wrapper button:hover{
+    box-shadow: 0px 0px 8px #f6951e75;
+}
+
+.drop_01 {
+    left: 22px;
+    position: absolute;
+
+}
+
+
+.drop_01 .dropdown-toggle::after {
+    right: auto;
+    top: -2px !important;
+    left: -3px !important;
+}
+
+.drop_01 .dropdown-menu.dropdown-menu-right, .drop_01 .dropdown-menu.dropdown-menu-right, .drop_01 .btn-group .dropdown-menu.dropdown-menu-right {
+    left: 39px !important;
+    right: auto !important;
+}
+
+.drop_01 select#station_select {
+    margin: 3px 0;
+}
+.drop_01 .dropdown-menu input {
+    margin: 3px 0;
+}
+
+.drop_01  .dropdown-menu.dropdown-menu-right.show {
+    padding: 10px 10px 0px;
+}
