--- a/public/dashboard/assets/css/style.css
+++ b/public/dashboard/assets/css/style.css
@@ -293,3 +293,21 @@ a:hover {
 #tblMafkodat_wrapper button:hover{
     box-shadow: 0px 0px 8px #f6951e75;
 }
+
+#tblItemMafkodat {
+    white-space: nowrap;
+}
+
+#tblItemMafkodat_wrapper button{
+    background: #f6931e;
+    height: 40px;
+    width: 105px;
+    color: #fff;
+    border: 0;
+    border-radius: 5px;
+    margin: 10px ;
+}
+
+#tblItemMafkodat_wrapper button:hover{
+    box-shadow: 0px 0px 8px #f6951e75;
+}
