--- a/public/dashboard/assets/css/style.css
+++ b/public/dashboard/assets/css/style.css
@@ -311,3 +311,31 @@ a:hover {
 #tblItemMafkodat_wrapper button:hover{
     box-shadow: 0px 0px 8px #f6951e75;
 }
+
+.drop_01 {
+    right: 22px;
+    position: absolute;
+}
+
+
+.drop_01 .dropdown-toggle::after {
+    left: auto;
+    top: -2px !important;
+    right: -3px !important;
+}
+
+.drop_01 .dropdown-menu.dropdown-menu-right, .drop_01 .dropdown-menu.dropdown-menu-right, .drop_01 .btn-group .dropdown-menu.dropdown-menu-right {
+    right: -98px !important;
+    left: auto !important;
+}
+
+.drop_01 select#station_select {
+    margin: 3px 0;
+}
+.drop_01 .dropdown-menu input {
+    margin: 3px 0;
+}
+
+.drop_01  .dropdown-menu.dropdown-menu-right.show {
+    padding: 10px 10px 0px;
+}
