--- a/public/dashboard/assets/css/style-rtl.css
+++ b/public/dashboard/assets/css/style-rtl.css
@@ -354,14 +354,6 @@ a:hover {
 }
 
 
-.main-menu .main-menu-content {
-    overflow: auto !important;
-}
-
-.main-menu .main-menu-content {
-    height: 74% !important;
-    position: relative;
-}
 
 li.breadcrumb-item {
     min-width: 100px;
@@ -395,4 +387,28 @@ li.breadcrumb-item::after {
     bottom: -10px;
     left: -3px;
     transform: rotate(316deg);
+}
+
+
+.main-menu .navbar-header {
+    height: 100%;
+    width: 260px;
+    height: 14.45rem;
+    position: relative;
+    padding: 0.35rem 1.64rem 0.3rem 1rem;
+    -webkit-transition: 300ms ease all, background 0s;
+    transition: 300ms ease all, background 0s;
+}
+
+
+.main-menu .main-menu-content {
+    height: calc(100% - 14.45rem) !important;
+    position: relative;
+}
+
+
+.img_menu_01 {
+    width: 100%;
+    height: 180px;
+    margin: 10px auto;
 }
