--- a/public/dashboard/assets/css/style.css
+++ b/public/dashboard/assets/css/style.css
@@ -340,13 +340,10 @@ a:hover {
     padding: 10px 10px 0px;
 }
 
-.main-menu .main-menu-content {
-    overflow: auto !important;
-}
-
-.main-menu .main-menu-content {
-    height: 74% !important;
-    position: relative;
+.img_menu_01 {
+    width: 100%;
+    height: 180px;
+    margin: 10px auto;
 }
 
 li.breadcrumb-item {
@@ -382,4 +379,21 @@ li.breadcrumb-item::after {
     right: -3px;
     left: auto;
     transform: rotate(225deg);
+}
+
+
+.main-menu .navbar-header {
+    height: 100%;
+    width: 260px;
+    height: 14.45rem;
+    position: relative;
+    padding: 0.35rem 1.64rem 0.3rem 1rem;
+    -webkit-transition: 300ms ease all, background 0s;
+    transition: 300ms ease all, background 0s;
+}
+
+
+.main-menu .main-menu-content {
+    height: calc(100% - 14.45rem) !important;
+    position: relative;
 }
